languages: use imagestream for nginx

--- a/roles/openshift-apps/languages/templates/cron.yml
+++ b/roles/openshift-apps/languages/templates/cron.yml
@@ -231,7 +231,7 @@ spec:
         spec:
           restartPolicy: Never
           containers:
-          - image: allinurl/goaccess
+          - image: docker.io/allinurl/goaccess
             name: goaccess
             imagePullPolicy: IfNotPresent
             args:
