--- a/inventory/host_vars/ns13.rdu2.fedoraproject.org
+++ b/inventory/host_vars/ns13.rdu2.fedoraproject.org
@@ -19,7 +19,7 @@ public_ip: 209.132.190.1
 # This is consumed by the roles/fedora-web/main role
 sponsor: redhat
 datacenter: rdu
-vpn: false
+vpn: true
 
 nrpe_procs_warn: 1200
 nrpe_procs_crit: 1400
