fix the remote proxy dns to point to the right things in ifcfg

--- a/inventory/host_vars/proxy05.fedoraproject.org
+++ b/inventory/host_vars/proxy05.fedoraproject.org
@@ -16,6 +16,8 @@ dns: 8.8.8.8
 eth0_ip: 185.141.165.254
 eth0_nm: 255.255.254.0
 vpn: true
+dns1: 8.8.8.8
+dns2: 8.8.4.4
 
 nagios_Check_Services:
   nrpe: true
