--- a/inventory/host_vars/proxy06.fedoraproject.org
+++ b/inventory/host_vars/proxy06.fedoraproject.org
@@ -15,6 +15,8 @@ eth0_nm: 255.255.255.128
 has_ipv6: yes
 eth0_ipv6: "2605:bc80:3010:600:dead:beef:cafe:fed9"
 eth0_ipv6_gw: "2605:bc80:3010:600::1"
+dns1: 8.8.8.8
+dns2: 8.8.4.4
 
 # This is consumed by the roles/fedora-web/main role
 sponsor: osuosl
