--- a/inventory/host_vars/proxy07.fedoraproject.org
+++ b/inventory/host_vars/proxy07.fedoraproject.org
@@ -5,7 +5,8 @@ dns: 8.8.8.8
 
 eth0_ip: 174.141.234.172
 eth0_nm: 255.255.255.0
-
+dns1: 8.8.8.8
+dns2: 8.8.4.4
 # This is consumed by the roles/fedora-web/main role
 sponsor: bodhost
 datacenter: bodhost
