--- a/inventory/host_vars/proxy11.fedoraproject.org
+++ b/inventory/host_vars/proxy11.fedoraproject.org
@@ -3,6 +3,8 @@ nm: 255.255.255.248
 gw: 67.219.144.65
 dns: 8.8.8.8
 num_cpus: 10
+dns1: 8.8.8.8
+dns2: 8.8.4.4
 
 ks_url: http://209.132.181.6/repo/rhel/ks/kvm-fedora
 ks_repo: http://209.132.181.6/pub/fedora/linux/releases/33/Server/x86_64/os/
