--- a/inventory/host_vars/proxy02.fedoraproject.org
+++ b/inventory/host_vars/proxy02.fedoraproject.org
@@ -14,6 +14,8 @@ eth0_nm: 255.255.255.240
 has_ipv6: true
 eth0_ipv6: "2001:4178:2:1269::fed2"
 eth0_ipv6_gw: "2001:4178:2:1269::1"
+dns1: 8.8.8.8
+dns2: 8.8.4.4
 
 # This is consumed by the roles/fedora-web/main role
 sponsor: internetx
