--- a/inventory/host_vars/proxy03.fedoraproject.org
+++ b/inventory/host_vars/proxy03.fedoraproject.org
@@ -14,6 +14,8 @@ eth0_nm: 255.255.255.0
 has_ipv6: true
 eth0_ipv6: "2620:52:3:1:dead:beef:cafe:fed6"
 eth0_ipv6_gw: "2620:52:3:1:ffff:ffff:ffff:fffe"
+dns1: 8.8.8.8
+dns2: 8.8.4.4
 
 # This is consumed by the roles/fedora-web/main role
 sponsor: redhat
