--- a/inventory/host_vars/proxy04.fedoraproject.org
+++ b/inventory/host_vars/proxy04.fedoraproject.org
@@ -14,6 +14,8 @@ eth0_nm: 255.255.255.128
 has_ipv6: yes
 eth0_ipv6: "2610:28:3090:3001:dead:beef:cafe:fed3"
 eth0_ipv6_gw: "2610:28:3090:3001::1"
+dns1: 8.8.8.8
+dns2: 8.8.4.4
 
 # This is consumed by the roles/fedora-web/main role
 sponsor: ibiblio
