--- a/inventory/host_vars/proxy03.fedoraproject.org
+++ b/inventory/host_vars/proxy03.fedoraproject.org
@@ -1,7 +1,5 @@
 ---
-nm: 255.255.255.0
-gw: 8.43.85.254
-dns: 8.8.8.8
+
 
 ks_url: http://209.132.181.6/repo/rhel/ks/kvm-fedora
 ks_repo: http://209.132.181.6/pub/fedora/linux/releases/33/Server/x86_64/os/
@@ -9,13 +7,44 @@ ks_repo: http://209.132.181.6/pub/fedora/linux/releases/33/Server/x86_64/os/
 vmhost: virthost-cc-rdu02.fedoraproject.org
 volgroup: /dev/vg_guests
 
-eth0_ip: 8.43.85.73
-eth0_nm: 255.255.255.0
-has_ipv6: true
-eth0_ipv6: "2620:52:3:1:dead:beef:cafe:fed6"
-eth0_ipv6_gw: "2620:52:3:1:ffff:ffff:ffff:fffe"
+dns: 8.8.8.8
 dns1: 8.8.8.8
 dns2: 8.8.4.4
+
+has_ipv4: yes
+eth0_ipv4: 8.43.85.73
+eth0_ipv4_nm: 24
+eth0_ipv4_gw: 8.43.85.254
+
+has_ipv6: true
+eth0_ipv6: "2620:52:3:1:dead:beef:cafe:fed6"
+eth0_ipv6_nm: 64
+eth0_ipv6_gw: "2620:52:3:1:ffff:ffff:ffff:fffe"
+
+mac0: "52:54:00:c1:18:c6"
+public_hostname: proxy03.fedoraproject.org
+
+network_connections:
+  - name: eth0
+    mac: "{{ mac0 }}"
+    type: ethernet
+    autoconnect: yes
+    ip:
+      address: 
+      - "{{ eth0_ipv4 }}/{{ eth0_ipv4_nm }}"
+      - "{{ eth0_ipv6 }}/{{ eth0_ipv6_nm }}"
+      gateway4: "{{ eth0_ipv4_gw }}"
+      gateway6: "{{ eth0_ipv6_gw }}"
+      dns: 
+      - "{{ dns1 }}"
+      - "{{ dns2 }}"
+      - 2001:4860:4860::8888
+      dns_search: 
+      - vpn.fedoraproject.org
+      - fedoraproject.org
+      dhcp4: no
+      auto6: no
+
 
 # This is consumed by the roles/fedora-web/main role
 sponsor: redhat
