--- a/inventory/host_vars/proxy12.fedoraproject.org
+++ b/inventory/host_vars/proxy12.fedoraproject.org
@@ -10,13 +10,11 @@ vmhost: ibiblio05.fedoraproject.org
 volgroup: /dev/vg_guests
 
 mem_size: 16384
+max_mem_size: 20000
 num_cpus: 8
 
 ks_url: http://209.132.181.6/repo/rhel/ks/kvm-fedora
 ks_repo: http://209.132.181.6/pub/fedora/linux/releases/33/Server/x86_64/os/
-
-dns1: 8.8.8.8
-dns2: 8.8.4.4
 
 dns_search1: "vpn.fedoraproject.org"
 dns_search2: "fedoraproject.org"
@@ -28,9 +26,12 @@ eth0_ipv4_gw: 152.19.134.129
 
 has_ipv6: yes
 eth0_ipv6: "2610:28:3090:3001:5054:ff:feda:bbd8"
+eth0_ipv6_nm: 64
 eth0_ipv6_gw: "2610:28:3090:3001::1"
+dns1: 8.8.8.8
+dns2: 8.8.4.4
 
-mac0: 52:54:00:84:5D:9F
+mac0: "52:54:00:84:5d:9f"
 
 network_connections:
   - name: eth0
@@ -58,4 +59,3 @@ vpn: true
 
 nrpe_procs_warn: 1200
 nrpe_procs_crit: 1400
-
