--- a/inventory/host_vars/proxy11.fedoraproject.org
+++ b/inventory/host_vars/proxy11.fedoraproject.org
@@ -1,5 +1,4 @@
 ---
-num_cpus: 10
 freezes: true
 
 datacenter: dedicatedsolutions
@@ -10,8 +9,12 @@ sponsor: dedicatedsolutions
 vmhost: dedicatedsolutions01.fedoraproject.org
 volgroup: /dev/vg_virthost
 
-ks_url: http://209.132.181.6/repo/rhel/ks/kvm-fedora
-ks_repo: http://209.132.181.6/pub/fedora/linux/releases/33/Server/x86_64/os/
+mem_size: 16384
+max_mem_size: 32768
+num_cpus: 10
+
+ks_url: http://38.145.60.16/repo/rhel/ks/kvm-fedora
+ks_repo: http://38.145.60.16/pub/fedora/linux/releases/33/Server/x86_64/os/
 
 dns1: 8.8.8.8
 dns2: 8.8.4.4
@@ -29,29 +32,30 @@ eth0_ipv6: "2604:1580:fe00:0:dead:beef:cafe:fed1"
 eth0_ipv6_nm: 64
 eth0_ipv6_gw: "2604:1580:fe00::1"
 
-mac0: 52:54:00:96:fb:f7
+mac0: "52:54:00:96:fb:f7"
+public_hostname: proxy11.fedoraproject.org
 
 network_connections:
   - name: eth0
     mac: "{{ mac0 }}"
-    state: up
     type: ethernet
     autoconnect: yes
     ip:
       address: 
       - "{{ eth0_ipv4 }}/{{ eth0_ipv4_nm }}"
-      - "{{ eth0_ipv6 }}/{{ eth0_ipv6_nm }}"      
+      - "{{ eth0_ipv6 }}/{{ eth0_ipv6_nm }}"
       gateway4: "{{ eth0_ipv4_gw }}"
       gateway6: "{{ eth0_ipv6_gw }}"
       dns: 
       - "{{ dns1 }}"
       - "{{ dns2 }}"
-      dns_search:
+      - 2001:4860:4860::8888
+      dns_search: 
       - "{{ dns_search1 }}" 
       - "{{ dns_search2 }}" 
       dhcp4: no
       auto6: no
-  
+
 postfix_group: vpn
 vpn: true
 
