--- a/roles/openshift-apps/languages/templates/cron.yml
+++ b/roles/openshift-apps/languages/templates/cron.yml
@@ -80,12 +80,18 @@ spec:
               for rel in $(ls -1d results/f*); do 
                 ./build_website.py -v --results $(basename ${rel}) ;
               done ;
-              cd website && hugo -D --baseURL https://languages{{ env_suffix }}.fedoraproject.org &&
-              cp -R public /src/results/
+              cd website && hugo -D -d /src/results/public --noTimes --baseURL https://languages{{ env_suffix }}.fedoraproject.org
             volumeMounts:
             - name: srpm-data
               readOnly: false
               mountPath: /src/results
+            resources:
+              limits:
+                cpu: '0'
+                memory: 8Gi
+              requests:
+                cpu: '0'
+                memory: 4Gi
 ---
 apiVersion: batch/v1beta1
 kind: CronJob
