buildvm-a32-01.stg: new install, new mac
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/inventory/host_vars/buildvm-a32-01.stg.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildvm-a32-01.stg.iad2.fedoraproject.org
@@ -13,7 +13,7 @@ eth0_ipv4_gw: 10.3.167.254
 
 has_ipv6: no
  
-mac0: 52:54:00:d7:04:aa
+mac0: 52:54:00:d4:6a:ca
 
 network_connections:
 - name: eth0
