--- a/inventory/host_vars/buildvm-ppc64le-13.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildvm-ppc64le-13.iad2.fedoraproject.org
@@ -12,7 +12,7 @@ eth0_ipv4_gw: 10.3.171.254
 
 has_ipv6: no
  
-mac0: 52:54:00:f0:f0:eb
+mac0: 52:54:00:36:bc:34
 
 network_connections:
 - name: eth0
