--- a/inventory/host_vars/buildvm-ppc64le-15.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildvm-ppc64le-15.iad2.fedoraproject.org
@@ -12,7 +12,7 @@ eth0_ipv4_gw: 10.3.171.254
 
 has_ipv6: no
  
-mac0: 52:54:00:1e:dc:92
+mac0: 52:54:00:68:64:dc
 
 network_connections:
 - name: eth0
