copr-hv: libvirtd bridge

--- a/roles/copr/hypervisor/README
+++ b/roles/copr/hypervisor/README
@@ -36,3 +36,7 @@ Manually created space for volumes/images:
 
   1. lvcreate -n images -l 100%FREE vg_guests
   2. mkfs.ext4 /dev/mapper/vg_guests-images -L vmvolumes
+
+Manually created br0 interface.
+
+  Not done by me, TODO: add steps.
