buildhw: adjust some mac addresses and such
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/inventory/host_vars/buildhw-x86-02.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-x86-02.iad2.fedoraproject.org
@@ -10,8 +10,8 @@ eth0_ipv4_gw: 10.3.169.254
 
 has_ipv6: no
 
-mac0: 14:9e:cf:61:9e:61
-mac1: 14:9e:cf:61:9e:64
+mac0: 14:9e:cf:61:9f:4f
+mac1: 14:9e:cf:61:9f:52
 
 network_connections:
 - name: eth0
