--- a/inventory/host_vars/buildhw-x86-05.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-x86-05.iad2.fedoraproject.org
@@ -3,6 +3,32 @@ eth0_ip: 10.3.169.35
 gw: 10.3.169.254
 datacenter: iad2
 eth1_off: true
+eth0_ipv4: 10.3.169.35
+eth0_ipv4_nm: 255.255.255.0
+eth0_ipv4_gw: 10.3.169.254
 
 nm: 255.255.255.0
-dns: 10.3.163.33
+dns1: 10.3.163.33
+
+mac0: 14:9e:cf:61:9e:7b
+mac1: 14:9e:cf:61:9e:7e
+
+network_connections:
+- name: eth0
+  mac: "{{ mac0 }}"
+  state: up
+  type: ethernet
+  autoconnect: yes
+  ip:
+    address:
+    - "{{ eth0_ipv4 }}/{{ eth0_ipv4_nm }}"
+    gateway4: "{{ eth0_ipv4_gw }}"
+    dns:
+    - "{{ dns1 }}"
+    dhcp4: no
+    auto6: no
+- name: eth1
+  mac: "{{ mac1 }}"
+  type: ethernet
+  state: down
+
