--- a/inventory/host_vars/buildhw-x86-02.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-x86-02.iad2.fedoraproject.org
@@ -34,4 +34,6 @@ network_connections:
 - name: eth1
   persistent_state: present
   mac: "{{ mac1 }}"
+  state: down
   type: ethernet
+  autoconnect: yes
