buildhw-x86-05: turns out we need dns for clevis
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/inventory/host_vars/buildhw-x86-05.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildhw-x86-05.iad2.fedoraproject.org
@@ -9,6 +9,7 @@ eth0_ipv4_gw: 10.3.169.254
 
 nm: 255.255.255.0
 dns1: 10.3.163.33
+dns: 10.3.163.33
 
 mac0: 14:9e:cf:61:9e:7b
 mac1: 14:9e:cf:61:9e:7e
