--- a/inventory/host_vars/buildvm-ppc64le-34.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildvm-ppc64le-34.iad2.fedoraproject.org
@@ -5,6 +5,7 @@ dns1: 10.3.163.33
 dns2: 10.3.163.34
 
 has_ipv4: yes
+eth0_ip: 10.3.171.74
 eth0_ipv4: 10.3.171.74
 eth0_ipv4_nm: 24
 eth0_ipv4_gw: 10.3.171.254
