new mac address for buildvm-ppc64le-34
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/inventory/host_vars/buildvm-ppc64le-34.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildvm-ppc64le-34.iad2.fedoraproject.org
@@ -12,7 +12,7 @@ eth0_ipv4_gw: 10.3.171.254
 
 has_ipv6: no
 
-mac0: 52:54:00:4f:07:5f
+mac0: 52:54:00:b8:ba:ec
 
 network_connections:
 - name: eth0
