buildvm-a32-03: fix mac address
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/inventory/host_vars/buildvm-a32-03.iad2.fedoraproject.org
+++ b/inventory/host_vars/buildvm-a32-03.iad2.fedoraproject.org
@@ -11,7 +11,7 @@ eth0_ipv4_gw: 10.3.170.254
 
 has_ipv6: no
 
-mac0: 52:54:00:c3:fb:32
+mac0: 52:54:00:ec:a5:81
 
 network_connections:
 - name: eth0
