--- a/inventory/host_vars/batcave13.rdu2.fedoraproject.org
+++ b/inventory/host_vars/batcave13.rdu2.fedoraproject.org
@@ -10,6 +10,7 @@ ks_repo: http://38.145.60.16/repo/rhel/RHEL8-x86_64/
 
 vmhost: virthost-rdu01.fedoraproject.org
 volgroup: /dev/vg_guests
+virt_install_command: "{{ virt_install_command_two_nic }}"
 
 eth0_ip: 172.31.2.25
 eth0_nm: 255.255.255.0
